--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simplebar-react": "^2.4.3",
     "styled-components": "^5.3.6"
   }
 }
